Stock code - description tables script added

--- a/notebooks/data_exploration.ipynb
+++ b/notebooks/data_exploration.ipynb
@@ -4071,13 +4071,6 @@
     "While it was intended that each top 10 list only had 10 results, it appears that stock codes are not exactly unique, but instead are a classification that is almost unique-like. A stock code will not take into account a color difference between white and cream, for example, but can still reffer to a \"HANGING HEART T-LIGHT HOLDER\""
    ],
    "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
-   "metadata": {}
   }
  ],
  "metadata": {
@@ -4096,10 +4089,10 @@
   },
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3.8.11 64-bit ('.venv')"
+   "display_name": "Python 3.8.10 64-bit ('.venv': venv)"
   },
   "interpreter": {
-   "hash": "bd2e86ee9e72bef9dc92d1b1554a3f1f22bb37beaa4287a57034c0ab74bc22f7"
+   "hash": "0ea2dbc4fe537a13f3b1160fe814a4da113f75e686db467bbd5fb66542125ca3"
   }
  },
  "nbformat": 4,
