reads Online Retail.xlsx instead of csv (now gone)

--- a/notebooks/data_exploration.ipynb
+++ b/notebooks/data_exploration.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "source": [
     "import os\r\n",
     "import numpy as np\r\n",
@@ -47,7 +47,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 1
+     "execution_count": 2
     }
    ],
    "metadata": {}
@@ -75,9 +75,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "source": [
-    "online_retail_data = pd.read_csv(f\"{os.getenv('PROJ_REPOS')}\\\\data\\\\Online_Retail.csv\", encoding='latin1')\r\n",
+    "online_retail_data = pd.read_excel(f\"{os.getenv('PROJ_REPOS')}\\\\data\\\\Online Retail.xlsx\")\r\n",
     "quantities_of_purchases_by_customer = pd.read_csv(f\"{os.getenv('PROJ_REPOS')}\\\\data\\\\Customer_Purchases.csv\", encoding='latin1', index_col='CustomerID')\r\n",
     "quantities_of_purchases_by_customer_norm = pd.read_csv(f\"{os.getenv('PROJ_REPOS')}\\\\data\\\\Customer_Purchases_Norm.csv\", encoding='latin1', index_col='CustomerID')"
    ],
