--- a/notebooks/dataset_transformation.ipynb
+++ b/notebooks/dataset_transformation.ipynb
@@ -68,7 +68,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "source": [
-    "online_retail_data = pd.read_csv(f\"{os.getenv('PROJ_REPOS')}\\\\data\\\\Online_Retail.csv\", encoding='latin1')\r\n",
+    "online_retail_data = pd.read_excel(f\"{os.getenv('PROJ_REPOS')}\\\\data\\\\Online Retail.xlsx\")\r\n",
     "online_retail_data.head(n=10)"
    ],
    "outputs": [
