dataset_generator.py splist data into train/test; start cluster inference

--- a/notebooks/dataset_transformation.ipynb
+++ b/notebooks/dataset_transformation.ipynb
@@ -17,6 +17,13 @@
   {
    "cell_type": "markdown",
    "source": [
+    "This notebook is essentailly a draft that led to the `dataset_generator.py` script"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "## Data Source  \r\n",
     "Dr Daqing Chen, Director: Public Analytics group. chend '@' lsbu.ac.uk, School of Engineering, London South Bank University, London SE1 0AA, UK."
    ],
@@ -33,14 +40,14 @@
    "cell_type": "code",
    "execution_count": 2,
    "source": [
-    "import os\r\n",
-    "import numpy as np\r\n",
-    "import pandas as pd\r\n",
-    "from matplotlib import pyplot as plt\r\n",
-    "from sklearn.preprocessing import Normalizer\r\n",
-    "from sklearn.decomposition import PCA\r\n",
-    "from sklearn.cluster import Birch\r\n",
-    "from dotenv import load_dotenv\r\n",
+    "import os\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from matplotlib import pyplot as plt\n",
+    "from sklearn.preprocessing import Normalizer\n",
+    "from sklearn.decomposition import PCA\n",
+    "from sklearn.cluster import Birch\n",
+    "from dotenv import load_dotenv\n",
     "load_dotenv()"
    ],
    "outputs": [
