--- a/notebooks/stock_codes.ipynb
+++ b/notebooks/stock_codes.ipynb
@@ -16,12 +16,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "source": [
-    "import os\r\n",
-    "import numpy as np\r\n",
-    "import pandas as pd\r\n",
-    "from dotenv import load_dotenv\r\n",
+    "import os\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from dotenv import load_dotenv\n",
     "load_dotenv()"
    ],
    "outputs": [
@@ -33,18 +33,18 @@
       ]
      },
      "metadata": {},
-     "execution_count": 1
+     "execution_count": 5
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "source": [
-    "file_path = f\"{os.getenv('PROJ_REPOS')}\\\\data\\\\Online Retail.xlsx\"\r\n",
-    "online_retail = pd.read_excel(file_path)\r\n",
-    "online_retail['StockCode'] = online_retail['StockCode'].astype(str)\r\n",
+    "file_path = f\"{os.getenv('PROJ_REPOS')}/data/Online Retail.xlsx\"\n",
+    "online_retail = pd.read_excel(file_path)\n",
+    "online_retail['StockCode'] = online_retail['StockCode'].astype(str)\n",
     "online_retail['Description'] = online_retail['Description'].astype(str)"
    ],
    "outputs": [],
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "source": [
     "stock_items_raw = online_retail.query('Quantity > 0')[['StockCode', 'Description']].drop_duplicates()"
    ],
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "source": [
     "stock_items_raw"
    ],
@@ -171,18 +171,18 @@
       ]
      },
      "metadata": {},
-     "execution_count": 4
+     "execution_count": 8
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "source": [
-    "stock_items = stock_items_raw.dropna()\r\n",
-    "stock_items.loc[:, 'StockCode'] = stock_items.loc[:, 'StockCode'].str.upper()\r\n",
-    "stock_items['Desc_isupper'] = list(map(lambda x: x.isupper(), stock_items['Description']))\r\n",
+    "stock_items = stock_items_raw.dropna()\n",
+    "stock_items.loc[:, 'StockCode'] = stock_items.loc[:, 'StockCode'].str.upper()\n",
+    "stock_items['Desc_isupper'] = list(map(lambda x: x.isupper(), stock_items['Description']))\n",
     "stock_items = stock_items.query('Desc_isupper == True')[['StockCode', 'Description']]"
    ],
    "outputs": [],
@@ -190,12 +190,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "source": [
-    "duplicated_stock_codes = stock_items.copy(deep=True)\r\n",
-    "duplicated_stock_codes['duplicated'] = duplicated_stock_codes['StockCode'].duplicated()\r\n",
-    "duplicated_stock_codes = duplicated_stock_codes.query(\"duplicated == True\")[\"StockCode\"]\r\n",
-    "duplicated_stock_codes = list(duplicated_stock_codes.astype(str))\r\n",
+    "duplicated_stock_codes = stock_items.copy(deep=True)\n",
+    "duplicated_stock_codes['duplicated'] = duplicated_stock_codes['StockCode'].duplicated()\n",
+    "duplicated_stock_codes = duplicated_stock_codes.query(\"duplicated == True\")[\"StockCode\"]\n",
+    "duplicated_stock_codes = list(duplicated_stock_codes.astype(str))\n",
     "duplicated_stock_codes.sort()"
    ],
    "outputs": [],
@@ -203,16 +203,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "source": [
-    "duplicates_table = stock_items[stock_items['StockCode'].isin(duplicated_stock_codes)]\r\n"
+    "duplicates_table = stock_items[stock_items['StockCode'].isin(duplicated_stock_codes)]\n"
    ],
    "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "source": [
     "duplicates_table = duplicates_table.sort_values('StockCode').drop_duplicates()"
    ],
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "source": [
     "duplicates_table"
    ],
@@ -331,18 +331,18 @@
       ]
      },
      "metadata": {},
-     "execution_count": 9
+     "execution_count": 13
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "source": [
-    "'''\r\n",
-    "file_path = f\"{os.getenv('PROJ_REPOS')}\\\\data\\\\duplicates_table.csv\"\r\n",
-    "duplicates_table.to_csv(file_path)\r\n",
+    "'''\n",
+    "file_path = f\"{os.getenv('PROJ_REPOS')}/data/duplicates_table.csv\"\n",
+    "duplicates_table.to_csv(file_path)\n",
     "'''"
    ],
    "outputs": [
@@ -350,11 +350,11 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "'\\nfile_path = f\"{os.getenv(\\'PROJ_REPOS\\')}\\\\data\\\\duplicates_table.csv\"\\nduplicates_table.to_csv(file_path)\\n'"
+       "'\\nfile_path = f\"{os.getenv(\\'PROJ_REPOS\\')}/data/duplicates_table.csv\"\\nduplicates_table.to_csv(file_path)\\n'"
       ]
      },
      "metadata": {},
-     "execution_count": 10
+     "execution_count": 14
     }
    ],
    "metadata": {}
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "source": [
     "stock_items.query('Description == \"AMAZON\"')"
    ],
@@ -427,14 +427,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 11
+     "execution_count": 15
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "source": [
     "stock_items.query('Description == \"FOUND\"')"
    ],
@@ -481,14 +481,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 12
+     "execution_count": 16
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "source": [
     "stock_items.query('Description == \"FBA\"')"
    ],
@@ -535,16 +535,16 @@
       ]
      },
      "metadata": {},
-     "execution_count": 13
+     "execution_count": 17
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "source": [
-    "stock_items['multi_word'] = list(map(lambda desc: ' ' in desc, stock_items['Description']))\r\n",
+    "stock_items['multi_word'] = list(map(lambda desc: ' ' in desc, stock_items['Description']))\n",
     "stock_items.query(\"multi_word == False\")"
    ],
    "outputs": [
@@ -641,7 +641,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 14
+     "execution_count": 18
     }
    ],
    "metadata": {}
@@ -655,9 +655,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "source": [
-    "stock_codes = list(stock_items.StockCode.unique())\r\n",
+    "stock_codes = list(stock_items.StockCode.unique())\n",
     "stock_codes.sort()"
    ],
    "outputs": [],
@@ -665,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "source": [
     "stock_codes[-15:]"
    ],
@@ -692,7 +692,41 @@
       ]
      },
      "metadata": {},
-     "execution_count": 16
+     "execution_count": 20
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "source": [
+    "stock_codes[-15:]"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "['90214Y',\n",
+       " '90214Z',\n",
+       " 'AMAZONFEE',\n",
+       " 'C2',\n",
+       " 'DCGS0003',\n",
+       " 'DCGS0004',\n",
+       " 'DCGS0069',\n",
+       " 'DCGS0070',\n",
+       " 'DCGS0076',\n",
+       " 'DCGSSBOY',\n",
+       " 'DCGSSGIRL',\n",
+       " 'DOT',\n",
+       " 'PADS',\n",
+       " 'POST',\n",
+       " 'S']"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 21
     }
    ],
    "metadata": {}
@@ -706,19 +740,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 22,
    "source": [
-    "to_drop = [\r\n",
-    "    \"AMAZONFEE\",\r\n",
-    "    \"C2\",\r\n",
-    "    \"DOT\",\r\n",
-    "    \"PADS\",\r\n",
-    "    \"POST\",\r\n",
-    "    \"S\"\r\n",
-    "]\r\n",
-    "\r\n",
-    "to_keep = list(stock_codes)\r\n",
-    "for entry in to_drop:\r\n",
+    "to_drop = [\n",
+    "    \"AMAZONFEE\",\n",
+    "    \"C2\",\n",
+    "    \"DOT\",\n",
+    "    \"PADS\",\n",
+    "    \"POST\",\n",
+    "    \"S\"\n",
+    "]\n",
+    "\n",
+    "to_keep = list(stock_codes)\n",
+    "for entry in to_drop:\n",
     "    to_keep.remove(entry)"
    ],
    "outputs": [],
@@ -726,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 23,
    "source": [
     "stock_items = stock_items[stock_items[\"StockCode\"].isin(to_keep)].query(\"multi_word == True\")[['StockCode', 'Description']]"
    ],
@@ -735,9 +769,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 24,
    "source": [
-    "stock_items = stock_items.sort_values('StockCode').reset_index()[['StockCode', 'Description']]\r\n",
+    "stock_items = stock_items.sort_values('StockCode').reset_index()[['StockCode', 'Description']]\n",
     "stock_items_all = stock_items"
    ],
    "outputs": [],
@@ -745,7 +779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 25,
    "source": [
     "stock_items_all"
    ],
@@ -855,23 +889,36 @@
       ]
      },
      "metadata": {},
-     "execution_count": 20
+     "execution_count": 25
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 26,
    "source": [
-    "stock_items_all.to_csv(f\"{os.getenv('PROJ_REPOS')}\\\\data\\\\Stock_Items_All.csv\")"
+    "'''\n",
+    "stock_items_all.to_csv(f\"{os.getenv('PROJ_REPOS')}/data/Stock_Items_All.csv\")\n",
+    "'''"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "'\\nstock_items_all.to_csv(f\"{os.getenv(\\'PROJ_REPOS\\')}/data/Stock_Items_All.csv\")\\n'"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 26
+    }
+   ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 27,
    "source": [
     "stock_items = stock_items.drop_duplicates('StockCode')"
    ],
@@ -880,11 +927,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 28,
    "source": [
-    "stock_items.to_csv(f\"{os.getenv('PROJ_REPOS')}\\\\data\\\\Stock_Items.csv\")"
+    "'''\n",
+    "stock_items.to_csv(f\"{os.getenv('PROJ_REPOS')}/data/Stock_Items.csv\")\n",
+    "'''"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "'\\nstock_items.to_csv(f\"{os.getenv(\\'PROJ_REPOS\\')}/data/Stock_Items.csv\")\\n'"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 28
+    }
+   ],
    "metadata": {}
   },
   {
@@ -914,7 +974,7 @@
    "display_name": "Python 3.8.10 64-bit ('.venv': venv)"
   },
   "interpreter": {
-   "hash": "0ea2dbc4fe537a13f3b1160fe814a4da113f75e686db467bbd5fb66542125ca3"
+   "hash": "b014260332bc395769693f88422a5e915687014fb3cace3892ad054251ea24f6"
   }
  },
  "nbformat": 4,
